src/test/run-pass/vector-no-ann.rs
fn main() {
    // We will infer this to have the type vec[bot]
    let _foo = [];
}
